--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -15,9 +15,11 @@
   "author": "Leonardo Andrade",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "lodash": "^4.17.21",
     "mongoose": "^9.0.1"
   },
